--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "final",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://kexinwei.github.io/World-Hunger-Map/",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -11,7 +12,8 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "serve": "^14.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
